--- a/halaman_admin1-update/katalog-filter.html
+++ b/halaman_admin1-update/katalog-filter.html
@@ -267,7 +267,7 @@
             <label for="">Image</label>
             <input type="file" required />
           </div>
-          <button type="submit">Simpan</button>
+          <button type="submit" id="submit">Simpan</button>
         </form>
       </div>
     </div>
