--- a/halaman_admin1-update/our-service.html
+++ b/halaman_admin1-update/our-service.html
@@ -131,7 +131,7 @@
               <thead>
                 <tr>
                   <th>img</th>
-                  <th>jenis</th>
+                  <th>jenis Layanan</th>
                   <th>Nama filter</th>
                   <th>Deskripsi</th>
                 </tr>
@@ -267,7 +267,7 @@
             <label for="">Image</label>
             <input type="file" required />
           </div>
-          <button type="submit">Simpan</button>
+          <button type="submit" id="submit">Simpan</button>
         </form>
       </div>
     </div>
